--- a/index.html
+++ b/index.html
@@ -2,63 +2,61 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Futuristic Coin Wallet</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-  <script defer src="app.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Futuristic Wallet</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
-<body class="gradient-bg">
-  <div id="auth-container">
-    <div class="card login-card">
-      <h1>🪐 Coin Wallet Login</h1>
-      <input type="text" id="login-id" placeholder="Username">
-      <input type="password" id="login-pw" placeholder="Password">
-      <button onclick="login()">Login</button>
-      <div class="link-row">
-        <a href="#" onclick="showRegister()">Sign up</a> | 
-        <a href="#" onclick="showRecovery()">Forgot ID/Password?</a>
-      </div>
+<body>
+
+  <!-- 로그인 화면 -->
+  <div id="auth-container" class="card hidden">
+    <h2>Login</h2>
+    <input type="text" id="login-id" placeholder="Username" />
+    <input type="password" id="login-pw" placeholder="Password" />
+    <button onclick="login()">Login</button>
+    <div class="link-row">
+      <a href="#" onclick="showRegister()">회원가입</a> |
+      <a href="#" onclick="showRecovery()">아이디/비밀번호 찾기</a>
     </div>
   </div>
 
-  <div id="wallet-container" class="hidden">
-    <div class="card">
-      <h2>👤 Welcome, <span id="username-display"></span></h2>
-      <p>💰 Your Balance: <strong id="wallet-balance">0</strong> Coins</p>
-      <button onclick="logout()">Logout</button>
+  <!-- 회원가입 화면 -->
+  <div id="register-container" class="card hidden">
+    <h2>회원가입</h2>
+    <input type="text" id="reg-id" placeholder="Username" />
+    <input type="password" id="reg-pw" placeholder="Password" />
+    <button onclick="register()">가입하기</button>
+    <div class="link-row">
+      <a href="#" onclick="backToLogin()">← 로그인으로 돌아가기</a>
     </div>
   </div>
 
-  <div id="admin-panel" class="hidden">
-    <div class="card">
-      <h2>🛠 Admin Panel</h2>
-      <p>Manage user balances and accounts</p>
+  <!-- 비밀번호 찾기 화면 -->
+  <div id="recovery-container" class="card hidden">
+    <h2>아이디 / 비밀번호 찾기</h2>
+    <p>(데모에서는 기능 없음)</p>
+    <div class="link-row">
+      <a href="#" onclick="backToLogin()">← 로그인으로 돌아가기</a>
+    </div>
+  </div>
+
+  <!-- 지갑 화면 -->
+  <div id="wallet-container" class="card hidden">
+    <h2>내 지갑</h2>
+    <p>👤 <span id="username-display"></span></p>
+    <p>💰 보유 금액: <span id="wallet-balance"></span> 코인</p>
+    <button onclick="logout()">로그아웃</button>
+    <div id="admin-panel" class="hidden">
+      <h3>관리자 패널</h3>
       <table id="user-table">
-        <thead><tr><th>User</th><th>Balance</th><th>Actions</th></tr></thead>
+        <thead>
+          <tr><th>사용자</th><th>금액</th><th>삭제</th></tr>
+        </thead>
         <tbody></tbody>
       </table>
     </div>
   </div>
 
-  <!-- Registration Form -->
-  <div id="register-container" class="hidden">
-    <div class="card">
-      <h2>Create New Account</h2>
-      <input type="text" id="reg-id" placeholder="Choose Username">
-      <input type="password" id="reg-pw" placeholder="Choose Password">
-      <button onclick="register()">Register</button>
-      <button onclick="backToLogin()">Back to Login</button>
-    </div>
-  </div>
-
-  <!-- Recovery Form -->
-  <div id="recovery-container" class="hidden">
-    <div class="card">
-      <h2>Recover ID / Password</h2>
-      <p>이 데모에선 이메일 인증 없이 복구는 안 됩니다 🙅‍♂️</p>
-      <button onclick="backToLogin()">Back to Login</button>
-    </div>
-  </div>
+  <script src="app.js"></script>
 </body>
 </html>
